---------------------------------------------------------------------------------------------------
Version: 2.8.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.8.2
Date: 2025-11-10
  Bugfixes:
    - Fixed exporting projects to string, when settings remnants are present.
    - We really need to get rid of those...
---------------------------------------------------------------------------------------------------
Version: 2.8.1
Date: 2025-11-09
  Bugfixes:
    - Fixed module dropping into a crafting machine (using Z).
    - Fixed tile ghosts lingering when pasting blueprints on space platforms.
    - Fixed duplication of item requests in fuel inventories, for exported blueprints.
    - Fixed that cryogenic plant mirroring was not saved.
  Minor Features:
    - Added a command to refresh the top left mod button, in case it disappears
  Gui:
    - Fixed missing label for "All" settings in updated settings entity UI.
---------------------------------------------------------------------------------------------------
Version: 2.8.0
Date: 2025-11-09
  Features:
    - Added support for staged space platforms!
    - Added a new project creation UI.
  Changes:
    - Revised project settings UI.
    - The names of surfaces in projects now match the project/stage name.
    - Map gen settings are now saved and can be shared when exported/imported to string.
  Bugfixes:
    - "Surface properties" (crafting restrictions) are now respected when setting a project to use a planet's map gen.
---------------------------------------------------------------------------------------------------
Version: 2.7.1
Date: 2025-11-02
  Bugfixes
    - Fixed handling of item requests for fuel and nutrients.
    - Fixed several issues relating to bot item requests.
    - Duplicate item requests highlights will no longer appear on some entities.