@@ -280,7 +280,7 @@ set-map-gen-settings-from-planet-tooltip=Set settings to a specific seed/planet.
 sync-map-gen-settings=Apply map gen settings from current stage [img=info]
 sync-map-gen-settings-tooltip=Sets map gen settings for all stages to match the current stage, then regenerates all stages.\n\nTo change map settings:\n - Go to editor mode (/editor)\n - Click the "Surfaces" tab\n - Click "Edit map gen settings"\n - Possibly un-check "Generate new chunks with lab tiles"\n - Click this button to regenerate all stages\n Additionally, the "Global electric network" and "Ignore surface conditions" settings will be applied.
 
-delete-project=[img=utility/trash]Delete project
+delete-project=Delete project
 delete-project-confirmation1=Are you sure you want to delete project __1__?
 delete-project-confirmation2=This cannot be undone.
 
