@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.8.3
 Date: ????
-  Changes:
+  Gui:
+    - Moved "Delete project" button to the Project list UI.
 ---------------------------------------------------------------------------------------------------
 Version: 2.8.2
 Date: 2025-11-10
